--- a/css/style.scss
+++ b/css/style.scss
@@ -32,7 +32,7 @@ img {
     font-family: "Anek Devanagari", sans-serif;
   }
   &__wrap {
-    padding-top: 2rem;
+    padding: 2rem 0;
     display: grid;
     grid-template-columns: 2fr 4fr;
     align-items: center;
@@ -72,6 +72,7 @@ img {
   padding: 0 20px;
 }
 .left-bar {
+  align-self: start;
   .title {
     border-bottom: 2px solid #fff;
   }
@@ -210,6 +211,7 @@ img {
 .languages {
   &__wrap {
     display: flex;
+    gap: 2rem;
     justify-content: space-between;
   }
   &__item {
@@ -238,5 +240,62 @@ img {
     height: 8px;
     border-radius: 50%;
     background-color: $primary-color;
+  }
+}
+@media screen and (max-width: 920px) {
+  .portfolio__wrap,
+  .languages__wrap,
+  .experience__wrap {
+    flex-wrap: wrap;
+  }
+  .experience__wrap {
+    gap: 2rem;
+  }
+  .header__title {
+    font-size: 3rem;
+  }
+  .header__role {
+    font-size: 2rem;
+  }
+}
+@media screen and (max-width: 750px) {
+  .header {
+    .avatar {
+      max-width: 150px;
+    }
+    .download {
+      display: inline-block;
+      width: 50px;
+      height: 50px;
+    }
+  }
+}
+@media screen and (max-width: 640px) {
+  .header__container {
+    flex-wrap: wrap;
+  }
+  .grid-wrap {
+    display: block;
+  }
+  .languages__wrap {
+    display: block;
+  }
+  .languages__item {
+    margin-bottom: 2rem;
+    justify-content: space-between;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .header__wrap {
+    display: block;
+    text-align: center;
+  }
+  .header__container {
+    display: block;
+    padding: 0;
+  }
+  .download__wrap {
+    margin: 0 auto;
   }
 }
