--- a/css/style.scss
+++ b/css/style.scss
@@ -160,11 +160,13 @@ img {
 .light-text {
   color: $secondary-color;
   margin-bottom: 1rem;
+  text-transform: uppercase;
 }
 .experience {
   margin-bottom: 2rem;
   &__wrap {
     display: flex;
+    margin-top: 2rem;
   }
   &__link {
     font-size: 14px;
