--- a/css/style.scss
+++ b/css/style.scss
@@ -182,6 +182,13 @@ img {
     margin-top: 1rem;
     font-size: 14px;
   }
+  &__company {
+    margin-bottom: 0.5rem;
+  }
+  &__title {
+    margin-top: 1rem;
+    font-size: 18px;
+  }
 }
 .portfolio {
   &__wrap {
