--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,12 @@ img {
 .portfolio {
   margin-bottom: 2rem;
 }
+.portfolio__item {
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  margin-bottom: 1rem;
+}
 .portfolio__wrap {
   display: flex;
   gap: 2rem;
